[package]
name = "website"
version = "0.1.0"
authors = ["Christian Dürr <contact@christianduerr.com>"]

[dev-dependencies]
rocket = { version = "0.2.8", features = ["testing"] }

[dependencies]
rocket_contrib = { version = "0.2.8", features = ["handlebars_templates"] }
rocket_codegen = "0.2.8"
rocket = "0.2.8"
